--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>lasagna</h1>
+    <img src="../images/lasagna.jpg">
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
