feat: :fire: add recipes with ingredients and instructions and images

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/pea chicken.html">Pea Chicken</a>
+    <a href="./recipes/potato pie.html">Potato Pie</a>
 </body>
 </html>
