--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,53 @@
 <body>
     <h1>lasagna</h1>
     <img src="../images/lasagna.jpg">
+    <p>Lasagna is a classic Italian dish that is perfect for any occasion. It is made with layers of lasagna noodles, meat sauce, béchamel sauce, and cheese.</p>
+    <p>Lasagna can be made with a variety of different fillings, but the most common filling is a ground beef and tomato sauce mixture.</p>
+    <p>Lasagna is a delicious and hearty dish that is sure to please everyone at the table. It is also relatively easy to make, even for beginner cooks.</p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>1 pound lasagna noodles</li>
+        <li>1 pound ground beef</li>
+        <li>1 onion, chopped</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 (28-ounce) can crushed tomatoes</li>
+        <li>1 (15-ounce) can tomato sauce</li>
+        <li>1 tablespoon dried oregano</li>
+        <li>1 teaspoon dried basil</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/4 teaspoon black pepper</li>
+        <li>1/2 cup butter</li>
+        <li>1/2 cup all-purpose flour</li>
+        <li>3 cups milk</li>
+        <li>1/4 teaspoon nutmeg</li>
+        <li>1/2 cup grated Parmesan cheese</li>
+        <li>1 cup shredded mozzarella cheese</li>
+    </ul>
+
+    <h3>Instructions:</h3>
+
+    <ol>
+        <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+        <li>In a large skillet, brown the ground beef over medium heat. Drain off any excess grease.</li>
+        <li>Add the onion and garlic to the skillet and cook until softened.</li>
+        <li>Stir in the crushed tomatoes, tomato sauce, oregano, basil, salt, and pepper. Bring to a simmer and cook for 15 minutes.</li>
+        <li>To make the béchamel sauce, melt the butter in a medium saucepan over medium heat. Whisk in the flour until smooth.</li>
+        <li>Gradually whisk in the milk until the sauce is thick and smooth. Season with nutmeg and salt to taste.</li>
+        <li>To assemble the lasagna, spread a thin layer of meat sauce in the bottom of a 9x13 inch baking dish.</li>
+        <li>Top with a layer of lasagna noodles.</li>
+        <li>Spread a layer of béchamel sauce over the noodles.</li>
+        <li>Repeat layers, ending with a layer of béchamel sauce.</li>
+        <li>Sprinkle the mozzarella cheese over the top of the lasagna.</li>
+        <li>Bake in the preheated oven for 30 minutes, or until the cheese is melted and bubbly.</li>
+        <li>Let cool for 10 minutes before slicing and serving.</li>
+    </ol>
+
+    <h3>Tips:</h3>
+    <ul>
+        <li>For a richer flavor, use homemade meat sauce.</li>
+        <li>To make the lasagna ahead of time, assemble it as directed and cover it tightly with plastic wrap. Refrigerate for up to 24 hours. When ready to bake, remove the lasagna from the refrigerator and let it come to room temperature for 30 minutes before baking.</li>
+        <li>To freeze the lasagna, assemble it as directed and cover it tightly with plastic wrap. Wrap the lasagna again in foil and freeze for up to 3 months. To bake, thaw the lasagna in the refrigerator overnight. Remove the plastic wrap and foil and bake at 375 degrees F (190 degrees C) for 45 minutes, or until the cheese is melted and bubbly.</li>
+    </ul>
+
     <a href="../index.html">Return to main page</a>
 </body>
-</html>
