--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/pea chicken.html">Pea Chicken</a>
-    <a href="./recipes/potato pie.html">Potato Pie</a>
+    <ul>        
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/pea chicken.html">Pea Chicken</a></li>
+        <li><a href="./recipes/potato pie.html">Potato Pie</a></li>
+    </ul>
 </body>
 </html>
